Fixing layout issues

--- a/css/cam-foundation.css
+++ b/css/cam-foundation.css
@@ -44,6 +44,7 @@
 .cam-tagline {
 	font-family: "GT-Walsheim-Medium";
 	color: #ffffff;
+	margin-top: 3rem;
 }
 
 .joy {
